{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 20,
  "lineage": "741ce99d-57f2-8091-b2f0-8ec3a47453bb",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:security-group/sg-015ec9d9a4d639b20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015ec9d9a4d639b20",
            "ingress": [],
            "name": "terraform-20221018154427907900000005",
            "name_prefix": "terraform-",
            "owner_id": "756553336060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee81c4092398738"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:internet-gateway/igw-0d7088e78bd7ac4be",
            "id": "igw-0d7088e78bd7ac4be",
            "owner_id": "756553336060",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0eee81c4092398738"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:route-table/rtb-06694cab327fa192a",
            "id": "rtb-06694cab327fa192a",
            "owner_id": "756553336060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7088e78bd7ac4be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee81c4092398738"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f7637a73629dfda",
            "route_table_id": "rtb-06694cab327fa192a",
            "subnet_id": "subnet-0070ee951c0d3ac7c"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da901a24530f45d7",
            "route_table_id": "rtb-06694cab327fa192a",
            "subnet_id": "subnet-0ccc7025901d36a17"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:subnet/subnet-0070ee951c0d3ac7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0070ee951c0d3ac7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756553336060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-0eee81c4092398738"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:subnet/subnet-0ccc7025901d36a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccc7025901d36a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756553336060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0eee81c4092398738"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756553336060:vpc/vpc-0eee81c4092398738",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0031ac661a83e285a",
            "default_route_table_id": "rtb-04b8d74878ea28bc9",
            "default_security_group_id": "sg-0e997e5b0def2c666",
            "dhcp_options_id": "dopt-0638fc4d694a049c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eee81c4092398738",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b8d74878ea28bc9",
            "owner_id": "756553336060",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}